@@ -1,3 +1,12 @@
+2011-02-23  Anna Cavender  <annacc@chromium.org>
+
+        Reviewed by Mihai Parparita.
+
+        Avoid flakiness due to async drawing of control glyphs by acting on "canplaythrough" instead of "playing".
+        https://bugs.webkit.org/show_bug.cgi?id=54640
+
+        * media/video-display-toggle.html:
+
 2011-02-22  Csaba Osztrogonác  <ossy@webkit.org>
 
         Unreviewed.
